finalProject/src/tree/CParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CParser.java */
import java.util.*;
import java.util.HashMap;
import structure.*;
import structure.affectation.*;
import structure.operator.*;
import structure.terminal.*;
import structure.comparator.*;


public class CParser/*@bgen(jjtree)*/implements CParserTreeConstants, CParserConstants {/*@bgen(jjtree)*/
  protected static JJTCParserState jjtree = new JJTCParserState();
        public static ArrayList<Function> allFunctions = new ArrayList<Function>();

    // Hastable for storing typedef types
    private static Set types = new HashSet();

    // Stack for determining when the parser
    // is parsing a typdef definition.
    private static Stack typedefParsingStack = new Stack();

    // Returns true if the given string is
    // a typedef type.
    private static boolean isType(String type){
                return types.contains(type);
    }

    // Add a typedef type to those already defined
    private static void addType(String type){
                types.add(type);
    }

    // Prints out all the types used in parsing the c source
    private static void printTypes(){
        for (Iterator i = types.iterator(); i.hasNext();) {
                System.out.println(i.next());
        }
    }

    public static PVirg parseIt(){
                PVirg tree = null;
                /*

		CParser parser;
  	  	// Hack to include type "special types"
	    types.add("__signed__");
	    types.add("__const");
	    types.add("__inline__");
	    types.add("__signed");

		try {
        	parser = new CParser(new java.io.FileInputStream(filePath));
      	}catch(java.io.FileNotFoundException e){
        	System.out.println("C Parser Version 0.1:  File " + filePath + " not found.");
        	return null;
        }
        
        tree = new PVirg();
		// End of file handler
	    try {
			ASTStart parseTree = parser.Start();
	        System.out.println("C Parser Version 0.1Alpha:  Java program parsed successfully.");
			parseTree.dump("");
			System.out.println("End");
			for(int index = 0; index < allFunctions.size(); index++){
				System.out.println("FUNCTION FOUND: " + allFunctions.get(index).getReturnedValue().getTypeDef() + " " +allFunctions.get(index).getName());
				if(allFunctions.get(index).getParams()!=null)
					for(int index2=0;index2 < allFunctions.get(index).getParams().size(); index2++){
						System.out.println("Param "+index2+": "+allFunctions.get(index).getParams().get(index2).getTypeDef()+ " " + allFunctions.get(index).getParams().get(index2).getName());
					}
			}
	    }catch(ParseException e){
	        System.out.println("C Parser Version 0.1Alpha:  Encountered errors during parse.");
	        e.printStackTrace();
	    }
	    */

            // Hack to include type "special types"
        types.add("__signed__");
        types.add("__const");
        types.add("__inline__");
        types.add("__signed");

            try {
                ASTStart parseTree = Start();
                System.out.println("C Parser Version 0.1Alpha:  Java program parsed successfully.");
                parseTree.dump("");
                System.out.println("End");
                for(int index = 0; index < allFunctions.size(); index++){
                  System.out.println("FUNCTION FOUND: " + allFunctions.get(index).getReturnedValue().getTypeDef() + " " +allFunctions.get(index).getName());
                  if(allFunctions.get(index).getParams()!=null)
                    for(int index2=0;index2 < allFunctions.get(index).getParams().size(); index2++){
                      System.out.println("Param "+index2+": "+allFunctions.get(index).getParams().get(index2).getTypeDef()+ " " + allFunctions.get(index).getParams().get(index2).getName());
                    }
                }
        }catch(ParseException e){
                System.out.println("C Parser Version 0.1Alpha:  Encountered errors during parse.");
                e.printStackTrace();
        }
            return tree;
    }

/** Main production **/
  static final public ASTStart Start() throws ParseException {
                          /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        ExternalDeclaration();
        if (jj_2_1(2147483647)) {
          ;
        } else {
          break label_1;
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ExternalDeclaration() throws ParseException {
    if (jj_2_2(2147483647)) {
      FunctionDefinition();
    } else if (jj_2_3(1)) {
      Declaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FunctionDefinition() throws ParseException {
                                                /*@bgen(jjtree) FunctionDefinition */
        ASTFunctionDefinition jjtn000 = new ASTFunctionDefinition(JJTFUNCTIONDEFINITION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Function fct = new Function();
        String fctName = "";
        String fctReturnedValueType = "";
        float[] defaultRange = new float[2];
        defaultRange[0] = -1;
        defaultRange[1] = -1;
        Variable fctReturnValue = new Variable(defaultRange);
        fct.setReturnedValue(fctReturnValue);
    try {
         System.out.println("in fct Definition ");
      if (jj_2_4(2147483647)) {
        fctReturnedValueType = DeclarationSpecifiers();
      } else {
        ;
      }
      FunctionDeclarator(fct);
      if (jj_2_5(1)) {
        DeclarationList();
      } else {
        ;
      }
      CompoundStatement();
         System.out.println("out fct Definition ");
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                fct.getReturnedValue().setTypeDef(fctReturnedValueType);
                allFunctions.add(fct);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Declaration() throws ParseException {
                      /*@bgen(jjtree) Declaration */
  ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclarationSpecifiers();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 62:
      case 67:
        InitDeclaratorList();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(56);
                                                               jjtree.closeNodeScope(jjtn000, true);
                                                               jjtc000 = false;
                                                              System.out.println(";");
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void DeclarationList() throws ParseException {
                          /*@bgen(jjtree) DeclarationList */
  ASTDeclarationList jjtn000 = new ASTDeclarationList(JJTDECLARATIONLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        Declaration();
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String DeclarationSpecifiers() throws ParseException {
                                  /*@bgen(jjtree) DeclarationSpecifiers */
                                  ASTDeclarationSpecifiers jjtn000 = new ASTDeclarationSpecifiers(JJTDECLARATIONSPECIFIERS);
                                  boolean jjtc000 = true;
                                  jjtree.openNodeScope(jjtn000);String name ="";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REGISTER:
      case TYPEDEF:
      case EXTERN:
      case STATIC:
      case AUTO:
        StorageClassSpecifier();
        if (jj_2_7(2147483647)) {
          DeclarationSpecifiers();
        } else {
          ;
        }
        break;
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_10(1)) {
          name = TypeSpecifier();
          if (jj_2_8(2147483647)) {
            DeclarationSpecifiers();
          } else {
            ;
          }
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VOLATILE:
          case CONST:
            TypeQualifier();
            if (jj_2_9(2147483647)) {
              DeclarationSpecifiers();
            } else {
              ;
            }
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
           {if (true) return name;}
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void StorageClassSpecifier() throws ParseException {
                                /*@bgen(jjtree) StorageClassSpecifier */
  ASTStorageClassSpecifier jjtn000 = new ASTStorageClassSpecifier(JJTSTORAGECLASSSPECIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AUTO:
        jj_consume_token(AUTO);
        break;
      case REGISTER:
        jj_consume_token(REGISTER);
        break;
      case STATIC:
        jj_consume_token(STATIC);
        break;
      case EXTERN:
        jj_consume_token(EXTERN);
        break;
      case TYPEDEF:
        jj_consume_token(TYPEDEF);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                typedefParsingStack.push(Boolean.TRUE);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String TypeSpecifier() throws ParseException {
                                        /*@bgen(jjtree) TypeSpecifier */
                                        ASTTypeSpecifier jjtn000 = new ASTTypeSpecifier(JJTTYPESPECIFIER);
                                        boolean jjtc000 = true;
                                        jjtree.openNodeScope(jjtn000);Token t; t=new Token();
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        t = jj_consume_token(VOID);
        break;
      case CHAR:
        t = jj_consume_token(CHAR);
        break;
      case SHORT:
        t = jj_consume_token(SHORT);
        break;
      case INT:
        t = jj_consume_token(INT);
        break;
      case LONG:
        t = jj_consume_token(LONG);
        break;
      case FLOAT:
        t = jj_consume_token(FLOAT);
        break;
      case DOUBLE:
        t = jj_consume_token(DOUBLE);
        break;
      case SIGNED:
        t = jj_consume_token(SIGNED);
        break;
      case UNSIGNED:
        t = jj_consume_token(UNSIGNED);
        break;
      case STRUCT:
      case UNION:
        StructOrUnionSpecifier();
        break;
      case ENUM:
        EnumSpecifier();
        break;
      default:
        jj_la1[4] = jj_gen;
        if (isType(getToken(1).image)) {
          TypedefName();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         System.out.println("TypeSpecifier: "+t.image+ " ");{if (true) return t.image;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void TypeQualifier() throws ParseException {
                        /*@bgen(jjtree) TypeQualifier */
  ASTTypeQualifier jjtn000 = new ASTTypeQualifier(JJTTYPEQUALIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      case VOLATILE:
        jj_consume_token(VOLATILE);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void StructOrUnionSpecifier() throws ParseException {
                                 /*@bgen(jjtree) StructOrUnionSpecifier */
  ASTStructOrUnionSpecifier jjtn000 = new ASTStructOrUnionSpecifier(JJTSTRUCTORUNIONSPECIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
                        typedefParsingStack.push(Boolean.FALSE);
      StructOrUnion();
      if (jj_2_11(3)) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        jj_consume_token(57);
        StructDeclarationList();
        jj_consume_token(58);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                typedefParsingStack.pop();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
